<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2launch_gui</name>
  <version>0.0.0</version>
  <description>Provides a gui option to the ros2 launch command</description>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
  <license>Apache-2.0</license>

  <depend>python_qt_binding</depend>
  <depend>ros2launch</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
